# sauce-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
old_tests/: iqdb.rs
src/: error.rs  lib.rs  prelude.rs  source.rs
src/source/: fuzzysearch.rs  iqdb.rs  saucenao.rs
src/source/fuzzysearch/: _internal.rs
src/source/fuzzysearch/_internal/: types.rs
src/sources/: iqdb.rs  mod.rs  saucenao.rs  yandex.rs
src/tests/: mod.rs
tests/: iqdb.rs  saucenao.rs  yandex.rs
tests/common/: mod.rs
