[package]
authors = ["Lyssieth <raxixor@rax.ee>"]
description = "API for searching for the original source of images."
edition = "2021"
keywords = ["library", "source", "find", "search"]
license = "MIT"
name = "sauce-api"
repository = "https://github.com/lyssieth/sauce-api"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
reqwest = { version = "0.11.17", default-features = false, features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["serde"] }
visdom = { version = "0.5.10", features = ["text"], optional = true }

[features]
default = ["saucenao", "iqdb", "fuzzysearch"]

saucenao = []         # Enables getting stuff from SauceNao
iqdb = ["dep:visdom"] # Enables getting stuff from IQDB
fuzzysearch = []      # Enables getting stuff from FuzzySearch

rustls = ["reqwest/rustls-tls"]

# This does a bit more than just using default reqwest features
# See this comment in their Cargo.toml https://github.com/seanmonstar/reqwest/blob/master/Cargo.toml#L30
# So we don't include it in the default features, but have it for symmetry
native_tls = ["reqwest/native-tls"]
