[package]
authors = ["Lyssieth <raxixor@rax.ee>"]
description = "API for searching for the original source of images."
edition = "2024"
keywords = ["library", "source", "find", "search"]
license = "MIT"
name = "sauce-api"
repository = "https://github.com/lyssieth/sauce-api"
version = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"]}
tracing = { version = "0.1" }

# Included directly; sorry syfaro
# fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs.git", branch = "main", optional = true }
scraper = "0.24"
hex = "0.4"

[features]
default = ["saucenao", "iqdb", "fuzzysearch"]

saucenao = []                     # Enables getting stuff from SauceNao
iqdb = []             # Enables getting stuff from IQDB
fuzzysearch = []
# fuzzysearch = ["dep:fuzzysearch"] # Enables getting stuff from FuzzySearch

rustls = ["reqwest/rustls-tls"]

# This does a bit more than just using default reqwest features
# See this comment in their Cargo.toml https://github.com/seanmonstar/reqwest/blob/master/Cargo.toml#L30
# So we don't include it in the default features, but have it for symmetry
native_tls = ["reqwest/native-tls"]
